if the given name ends with xml, don't add it